# image-compress-online

./: .gitignore  README.md
app/: capacitor.config.json  gen-icons.js  gen-icons.mjs  package-lock.json  package.json  vite.config.js
app/scripts/: build-all.ps1  deploy.ps1
app/src/: index.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/nsis/: uninstall-old.nsh
app/src-tauri/src/: lib.rs  main.rs
app/src/css/: animations.css  base.css  components.css  responsive.css  tokens.css
app/src/js/: app.js  auth.js  i18n.js  store.js  updater.js
app/src/js/engines/: bgchange.js  compress.js  watermark.js
app/src/js/pages/: bg-page.js  compress-page.js  watermark-page.js
app/src/js/ui/: fx.js  navbar.js  router.js  toast.js
app/src/public/: manifest.json  sw.js  version.json
backend/: .env.example  requirements.txt
backend/app/: database.py  main.py
backend/app/api/v1/: admin.py  auth.py  images.py  records.py
backend/app/core/: config.py
backend/app/models/: user.py
backend/app/schemas/: record.py
backend/app/utils/: bootstrap_admin.py  db_migrate.py  email_codes.py  email_utils.py  security.py
download/: .gitkeep
public/: about.html  admin.html  app.js  bg-change.html  changelog.html  changelog.json  donate.html  download.html  feedback.html  forgot-password.html  guide.js  index.html  login.html  menu.js  privacy.html  profile.html  register.html  reset-password.html  robots.txt  shared.css  sitemap.xml  watermark-remover.html
