[package]
name = "imagecompress"
version = "1.0.0"
description = "ImageCompress Cyberpunk Edition - Desktop App"
authors = ["ImageCompress"]
edition = "2021"

[lib]
name = "imagecompress_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
